<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JRDeviceControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="net_status">网络状态</string>
    <string name="baseBand_status">基带状态</string>
    <string name="radioFrequency_status">射频状态</string>
    <string name="ethernet_status">以太网状态</string>
    <string name="http_status">HTTP状态</string>
    <string name="snmp_status">SNMP状态</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_route_setting">RouteSettingActivity</string>
    

</resources>