<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 主布局 -->

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/net_status_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/net_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/net_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/net_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>

                    <TextView
                        android:id="@+id/baseBand_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/baseBand_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/baseBand_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>

                    <TextView
                        android:id="@+id/radioFrequency_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/radioFrequency_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/radioFrequency_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>

                    <TextView
                        android:id="@+id/ethernet_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/ethernet_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/ethernet_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>

                    <TextView
                        android:id="@+id/http_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/http_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/http_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>

                    <TextView
                        android:id="@+id/snmp_status_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BFBFBF"
                        android:text="@string/snmp_status"
                        android:textSize="24sp" />

                    <com.jr.devicecontrol.util.ListViewForScrollView
                        android:id="@+id/snmp_status_listView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#BFBFBF"
                        android:dividerHeight="1dp" >
                    </com.jr.devicecontrol.util.ListViewForScrollView>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
    <!-- 侧滑菜单 -->

    <LinearLayout
        android:id="@+id/slide_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff" >

        <ListView
            android:id="@+id/lv_left_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#BFBFBF"
            android:dividerHeight="1dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>